[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://UI.tres" type="Theme" id=2]
[ext_resource path="res://Assets/End_Game.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/nomad-places-desert-middle-eastern-112783.mp3" type="AudioStream" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
mouse_filter = 1
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.0
margin_top = -202.0
margin_right = 231.0
margin_bottom = -47.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -300.0
margin_right = 91.0
margin_bottom = 300.0
alignment = 1

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 182.0
margin_bottom = 284.147
theme = ExtResource( 2 )
text = "To title screen"

[node name="Vote" type="Button" parent="VBoxContainer"]
margin_top = 288.0
margin_right = 182.0
margin_bottom = 312.147
theme = ExtResource( 2 )
text = "Vote"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 316.0
margin_right = 182.0
margin_bottom = 340.147
theme = ExtResource( 2 )
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Vote" to="." method="_on_Vote_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
